--- a/src/styles/blocks/_cards.scss
+++ b/src/styles/blocks/_cards.scss
@@ -94,7 +94,7 @@
     font-size: 2.6rem;
     line-height: 108%;
     color: variables.$text-color;
-    letter-spacing: -0.08rem;
+    letter-spacing: -0.14rem;
     font-weight: 500;
     margin: 0;
     padding: 0;
