--- a/src/styles/blocks/_left-block.scss
+++ b/src/styles/blocks/_left-block.scss
@@ -9,7 +9,7 @@
       font-weight: 500;
       font-size: 11rem;
       line-height: 80%;
-      letter-spacing: variables.$big-letter-spacing;
+      letter-spacing: -0.4rem;
       margin: 0;
       padding: 1.2rem;
     }
