--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -16,7 +16,7 @@
   &__item a {
     font-size: 1.8rem;
     line-height: 100%;
-    letter-spacing: variables.$small-letter-spacing;
+    letter-spacing: -0.09rem;
     text-decoration: none;
     padding: 0;
     margin: 0;
