--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -13,7 +13,7 @@
     line-height: 80%;
     color: variables.$base-white;
     font-weight: 500;
-    letter-spacing: variables.$big-letter-spacing;
+    letter-spacing: -0.5rem;
     padding: 0;
     margin: 0;
   }
